--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shangi-La Beach Resort</title>
-  <link rel="icon" href="/imgaes/logo.svg">
+  <link rel="icon" type="image/png" href="/images/favicon.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 
