HTML of Home Page
HTML of Home Page has been built

--- a/index.html
+++ b/index.html
@@ -11,8 +11,84 @@
 
 <body>
 
-  <header></header>
-  <main></main>
+  <header>
+    <nav>
+      <div id="logo"><img src="images/logo.svg" alt="logo"></div>
+      <ul>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Accommodations</a></li>
+        <li><a href="#">Amenities</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+
+    <section>
+      <h1>Shangri La Beach Resort - Your Dream Getaway</h1>
+      <h2>Escape to Paradise</h2>
+      <p>Indulge in luxury and breathtaking views at Shangri La Beach Resort.</p>
+    </section>
+
+    <section>
+      <h2>Experience Unforgettable Moments</h2>
+      <div>
+        <h3>Private Beach Access</h3>
+        <p>Step onto our pristine, white-sand beach.</p>
+      </div>
+      <div>
+        <h3>Infinity Pool</h3>
+        <p>Relax by our stunning oceanfront infinity pool.</p>
+      </div>
+      <div>
+        <h3>World-Class Spa</h3>
+        <p>Rejuvenate your mind and body at our spa.</p>
+      </div>
+      <div>
+        <h3>Exquisite Dining</h3>
+        <p>Savor culinary delights at our restaurants.</p>
+      </div>
+    </section>
+
+    <section>
+      <h2>Our Luxurious Accommodations</h2>
+      <div>
+        <h3>Ocean View Deluxe Room</h3>
+        <p>Enjoy stunning ocean views from your private balcony.</p>
+        <a href="#">[View Details]</a>
+      </div>
+      <div>
+        <h3>Beachfront Suite</h3>
+        <p>Step directly onto the sand from your spacious suite.</p>
+        <a href="#">[View Details]</a>
+      </div>
+      <div>
+        <h3>Garden View Family Room</h3>
+        <p>Perfect for families, with ample space and garden views.</p>
+        <a href="#">[View Details]</a>
+      </div>
+    </section>
+
+    <section>
+      <h2>What Our Guests Are Saying</h2>
+      <div>
+        <p>"Our stay at Shangri La was absolutely perfect! The service was impeccable, and the views were breathtaking."
+        </p>
+        <p>- Sarah M.</p>
+      </div>
+
+      <div>
+        <p>"The beachfront suite was amazing! Waking up to the sound of the waves and stepping right onto the sand was
+          incredible."</p>
+        <p>- John B.</p>
+      </div>
+
+      <a href="#">[Read More Testimonials]</a>
+
+    </section>
+
+  </main>
   <footer></footer>
 
 </body>
