Nav and Hero Section for homepage
finshed

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
   <header>
     <nav>
-      <div id="logo"><img src="images/logo.svg" alt="logo"></div>
+      <a href="/"><img id="logo" src="images/logo.svg" alt="Shangi-La logo"></a>
       <ul>
+        <li><a href="#" class="active">Home</a></li>
         <li><a href="#">News</a></li>
         <li><a href="#">Accommodations</a></li>
         <li><a href="#">Amenities</a></li>
@@ -25,10 +26,16 @@
 
   <main>
 
-    <section>
-      <h1>Shangri La Beach Resort - Your Dream Getaway</h1>
-      <h2>Escape to Paradise</h2>
-      <p>Indulge in luxury and breathtaking views at Shangri La Beach Resort.</p>
+    <section class="hero">
+      <video autoplay muted loop playsinline class="heroVideo">
+        <source src="videos/HeroSection.mp4">
+      </video>
+      <div class="overlay"></div>
+      <div class="heroContent">
+        <h1>Shangri La Beach Resort - Your Dream Getaway</h1>
+        <h2>Escape to Paradise</h2>
+        <p>Indulge in luxury and breathtaking views at Shangri La Beach Resort.</p>
+      </div>
     </section>
 
     <section>
