--- a/index.html
+++ b/index.html
@@ -44,50 +44,65 @@
 
     <section>
       <h2 class="sectionTitle">Experience Unforgettable Moments</h2>
-      <div class="branchA">
-        <div class="detailA" id="privateBeach">
-          <div class="descriptionA">
-            <h3>Private Beach Access</h3>
-            <p>Step onto our pristine, white-sand beach.</p>
+      <a href="activities&excursions.html">
+        <div class="branchA">
+          <div class="detailA" id="privateBeach">
+            <div class="descriptionA">
+              <h3>Private Beach Access</h3>
+              <p>Step onto our pristine, white-sand beach.</p>
+            </div>
+          </div>
+          <div class="detailA" id="infinityPool">
+            <div class="descriptionA">
+              <h3>Infinity Pool</h3>
+              <p>Relax by our stunning oceanfront infinity pool.</p>
+            </div>
           </div>
         </div>
-        <div class="detailA" id="infinityPool">
-          <div class="descriptionA">
-            <h3>Infinity Pool</h3>
-            <p>Relax by our stunning oceanfront infinity pool.</p>
-          </div>
-        </div>
-      </div>
+      </a>
 
-      <div class="branchA">
-        <div class="detailA" id="world-ClassSpa">
-          <div class="descriptionA">
-            <h3>World-Class Spa</h3>
-            <p>Rejuvenate your mind and body at our spa.</p>
+
+
+      <a href="spa.html">
+        <div class="branchA">
+          <div class="detailA" id="world-ClassSpa">
+            <div class="descriptionA">
+              <h3>World-Class Spa</h3>
+              <p>Rejuvenate your mind and body at our spa.</p>
+            </div>
           </div>
-        </div>
+      </a>
+
+      <a href="dining.html">
         <div class="detailA" id="dining">
           <div class="descriptionA">
             <h3>Exquisite Dining</h3>
             <p>Savor culinary delights at our restaurants.</p>
           </div>
         </div>
-      </div>
-      </div>
+        </div>
+        </div>
+      </a>
+
+
     </section>
 
     <section>
-      <h2 class="sectionTitle">Our Luxurious Accommodations</h2>
-      <div class="branchA">
-        <div class="detailA detailB" id="deluxeRoom">
-          <div class="gradient-overlay"></div>
-          <div class="descriptionB">
-            <h3>Ocean View Deluxe Room</h3>
-            <p>Enjoy stunning ocean views from your private balcony.</p>
-            <a href="#">[View Details]</a>
-          </div>
-        </div>
 
+
+      <h2 class="sectionTitle">Our Luxurious Accommodations</h2>
+      <a href="guestRooms.html">
+        <div class="branchA">
+          <div class="detailA detailB" id="deluxeRoom">
+            <div class="gradient-overlay"></div>
+            <div class="descriptionB">
+              <h3>Ocean View Deluxe Room</h3>
+              <p>Enjoy stunning ocean views from your private balcony.</p>
+              <a href="#">[View Details]</a>
+            </div>
+          </div>
+      </a>
+      <a href="guestRooms.html">
         <div class="detailA detailB" id="beachfront">
           <div class="gradient-overlay"></div>
           <div class="descriptionB">
@@ -96,7 +111,8 @@
             <a href="#">[View Details]</a>
           </div>
         </div>
-
+      </a>
+      <a href="guestRooms.html">
         <div class="detailA detailB" id="familyRoom">
           <div class="gradient-overlay"></div>
           <div class="descriptionB">
@@ -105,7 +121,12 @@
             <a href="#">[View Details]</a>
           </div>
         </div>
-      </div>
+        </div>
+      </a>
+
+
+
+
     </section>
 
     <div class="parallax"></div>
@@ -125,6 +146,8 @@
         </div>
       </div>
 
+      <hr>
+
       <div class="review">
         <figure>
           <img class="portrait" src="images/review-2.jpeg" alt="portraitJohn">
@@ -135,7 +158,7 @@
           <p class="name">- John B.</p>
         </div>
       </div>
-      <a href="#" id="readMore">[Read More Testimonials]</a>
+      <a href="testimonials.html" id="readMore">[Read More Testimonials]</a>
     </section>
 
   </main>
