--- a/dining.html
+++ b/dining.html
@@ -15,11 +15,11 @@
     <nav>
       <a href="/"><img id="logo" src="images/logo.svg" alt="Shangi-La logo"></a>
       <ul>
-        <li><a href="#" class="active">Home</a></li>
+        <!-- <li><a href="#" class="active">Home</a></li>
         <li><a href="#">News</a></li>
         <li><a href="#">Accommodations</a></li>
         <li><a href="#">Amenities</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Contact</a></li> -->
         <li><img src="" alt="this is an icon" id="icon"></li>
         <li><a id="weather" href="#"></a></li>
         <li><a id="description" href="#"></a></li>
