--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <nav>
       <a href="/"><img id="logo" src="images/logo.svg" alt="Shangi-La logo"></a>
       <ul>
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Accommodations</a></li>
-        <li><a href="#">Amenities</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><img src="" alt="this is an icon" id="icon"></li>
+        <!-- <li><a href="#" class="active">Home</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Accommodations</a></li>
+              <li><a href="#">Amenities</a></li>
+              <li><a href="#">Contact</a></li> -->
+        <li><img id="icon" src="" alt="this is an icon" id="icon"></li>
         <li><a id="weather" href="#"></a></li>
         <li><a id="description" href="#"></a></li>
       </ul>
@@ -29,7 +29,6 @@
   </header>
 
   <main>
-
     <section class="hero">
       <video autoplay muted loop playsinline class="heroVideo">
         <source src="videos/HeroSection.mp4">
@@ -44,46 +43,45 @@
 
     <section>
       <h2 class="sectionTitle">Experience Unforgettable Moments</h2>
-      <a href="activities&excursions.html">
-        <div class="branchA">
+
+      <div class="branchA">
+        <a href="activities&excursions.html">
           <div class="detailA" id="privateBeach">
             <div class="descriptionA">
               <h3>Private Beach Access</h3>
               <p>Step onto our pristine, white-sand beach.</p>
             </div>
           </div>
+        </a>
+        <a href="activities&excursions.html">
           <div class="detailA" id="infinityPool">
             <div class="descriptionA">
               <h3>Infinity Pool</h3>
               <p>Relax by our stunning oceanfront infinity pool.</p>
             </div>
           </div>
-        </div>
-      </a>
+        </a>
+      </div>
 
-
-
-      <a href="spa.html">
-        <div class="branchA">
+      <div class="branchA">
+        <a href="spa.html">
           <div class="detailA" id="world-ClassSpa">
             <div class="descriptionA">
               <h3>World-Class Spa</h3>
               <p>Rejuvenate your mind and body at our spa.</p>
             </div>
           </div>
-      </a>
-
-      <a href="dining.html">
-        <div class="detailA" id="dining">
-          <div class="descriptionA">
-            <h3>Exquisite Dining</h3>
-            <p>Savor culinary delights at our restaurants.</p>
+        </a>
+        <a href="dining.html">
+          <div class="detailA" id="dining">
+            <div class="descriptionA">
+              <h3>Exquisite Dining</h3>
+              <p>Savor culinary delights at our restaurants.</p>
+            </div>
           </div>
-        </div>
-        </div>
-        </div>
-      </a>
 
+        </a>
+      </div>
 
     </section>
 
@@ -91,8 +89,9 @@
 
 
       <h2 class="sectionTitle">Our Luxurious Accommodations</h2>
-      <a href="guestRooms.html">
-        <div class="branchA">
+
+      <div class="branchA">
+        <a href="guestRooms.html">
           <div class="detailA detailB" id="deluxeRoom">
             <div class="gradient-overlay"></div>
             <div class="descriptionB">
@@ -101,28 +100,28 @@
               <a href="#">[View Details]</a>
             </div>
           </div>
-      </a>
-      <a href="guestRooms.html">
-        <div class="detailA detailB" id="beachfront">
-          <div class="gradient-overlay"></div>
-          <div class="descriptionB">
-            <h3>Beachfront Suite</h3>
-            <p>Step directly onto the sand from your spacious suite.</p>
-            <a href="#">[View Details]</a>
+        </a>
+        <a href="guestRooms.html">
+          <div class="detailA detailB" id="beachfront">
+            <div class="gradient-overlay"></div>
+            <div class="descriptionB">
+              <h3>Beachfront Suite</h3>
+              <p>Step directly onto the sand from your spacious suite.</p>
+              <a href="#">[View Details]</a>
+            </div>
           </div>
-        </div>
-      </a>
-      <a href="guestRooms.html">
-        <div class="detailA detailB" id="familyRoom">
-          <div class="gradient-overlay"></div>
-          <div class="descriptionB">
-            <h3>Garden View Family Room</h3>
-            <p>Perfect for families, with ample space and garden views.</p>
-            <a href="#">[View Details]</a>
+        </a>
+        <a href="guestRooms.html">
+          <div class="detailA detailB" id="familyRoom">
+            <div class="gradient-overlay"></div>
+            <div class="descriptionB">
+              <h3>Garden View Family Room</h3>
+              <p>Perfect for families, with ample space and garden views.</p>
+              <a href="#">[View Details]</a>
+            </div>
           </div>
-        </div>
-        </div>
-      </a>
+        </a>
+      </div>
 
 
 
