--- a/activities&excursions.html
+++ b/activities&excursions.html
@@ -15,11 +15,11 @@
     <nav>
       <a href="/"><img id="logo" src="images/logo.svg" alt="Shangi-La logo"></a>
       <ul>
-        <li><a href="#" class="active">Home</a></li>
+        <!-- <li><a href="#">Home</a></li>
         <li><a href="#">News</a></li>
         <li><a href="#">Accommodations</a></li>
         <li><a href="#">Amenities</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Contact</a></li> -->
         <li><img src="" alt="this is an icon" id="icon"></li>
         <li><a id="weather" href="#"></a></li>
         <li><a id="description" href="#"></a></li>
@@ -127,6 +127,8 @@
           apply)</li>
       </ul>
     </div>
+    <hr>
+
 
     <div class="detailC">
       <h2>Booking & Information</h2>
