--- a/testimonials.html
+++ b/testimonials.html
@@ -16,11 +16,11 @@
     <nav>
       <a href="index.html"><img id="logo" src="images/logo.svg" alt="Shangi-La logo"></a>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <!-- <li><a href="index.html">Home</a></li>
         <li><a href="#">News</a></li>
         <li><a href="#">Accommodations</a></li>
         <li><a href="#">Amenities</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Contact</a></li> -->
         <li><img src="" alt="this is an icon" id="icon"></li>
         <li><a id="weather" href="#"></a></li>
         <li><a id="description" href="#"></a></li>
@@ -104,7 +104,6 @@
         Shangri La
         Beach Resort, we would love to hear from you!</p>
     </div>
-
 
   </main>
 
