--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" href="/images/favicon.png">
   <link rel="stylesheet" href="styles.css">
   <script src="/script.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
 </head>
 
 <body>
@@ -42,7 +43,7 @@
     </section>
 
     <section>
-      <h2 class="sectionTitle">Experience Unforgettable Moments</h2>
+      <h2 class="sectionTitle my-title">Experience Unforgettable Moments</h2>
 
       <div class="branchA">
         <a href="activities&excursions.html">
@@ -93,7 +94,7 @@
       <div class="branchA">
         <a href="guestRooms.html">
           <div class="detailA detailB" id="deluxeRoom">
-            <div class="gradient-overlay"></div>
+            <div class="gradientOverlay"></div>
             <div class="descriptionB">
               <h3>Ocean View Deluxe Room</h3>
               <p>Enjoy stunning ocean views from your private balcony.</p>
@@ -103,7 +104,7 @@
         </a>
         <a href="guestRooms.html">
           <div class="detailA detailB" id="beachfront">
-            <div class="gradient-overlay"></div>
+            <div class="gradientOverlay"></div>
             <div class="descriptionB">
               <h3>Beachfront Suite</h3>
               <p>Step directly onto the sand from your spacious suite.</p>
@@ -113,7 +114,7 @@
         </a>
         <a href="guestRooms.html">
           <div class="detailA detailB" id="familyRoom">
-            <div class="gradient-overlay"></div>
+            <div class="gradientOverlay"></div>
             <div class="descriptionB">
               <h3>Garden View Family Room</h3>
               <p>Perfect for families, with ample space and garden views.</p>
