--- a/dining.html
+++ b/dining.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav>
-      <a href="/"><img id="logo" src="images/logo.svg" alt="Shangi-La logo"></a>
+      <a href="index.html"><img id="logo" src="images/logo.svg" alt="Shangi-La logo"></a>
       <ul>
         <!-- <li><a href="#" class="active">Home</a></li>
         <li><a href="#">News</a></li>
