--- a/spa.html
+++ b/spa.html
@@ -14,7 +14,7 @@
 
   <header>
     <nav>
-      <a href="/"><img id="logo" src="images/logo.svg" alt="Shangi-La logo"></a>
+      <a href="index.html"><img id="logo" src="images/logo.svg" alt="Shangi-La logo"></a>
       <ul>
         <!-- <li><a href="index.html">Home</a></li>
         <li><a href="#">News</a></li>
