all path (included javascript)
has been fixed.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shangi-La Beach Resort</title>
-  <link rel="icon" type="image/png" href="/images/favicon.png">
+  <link rel="icon" type="image/png" href="images/favicon.png">
   <link rel="stylesheet" href="styles.css">
-  <script src="/script.js" defer></script>
+  <script src="script.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
 </head>
 
@@ -15,7 +15,7 @@
 
   <header>
     <nav>
-      <a href="index.html"><img id="logo" src="./images/logo.svg" alt="Shangi-La logo"></a>
+      <a href="index.html"><img id="logo" src="images/logo.svg" alt="Shangi-La logo"></a>
       <ul>
         <!-- <li><a href="#" class="active">Home</a></li>
               <li><a href="#">News</a></li>
